--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
   
   CD:    
     needs: [CI]
-    runs-on: ubuntu-tatest
+    runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v2
