--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
         uses: Azure/k8s-set-context@v1.1
         with:
           method: kubeconfig
-          kuberconfig: ${{ secrets.K8S_KUBECONFIG }}
+          kubeconfig: ${{ secrets.K8S_KUBECONFIG }}
           
       - uses: Azure/k8s-deploy@v1.3
         with:
